--- a/task3/front-end/softy-pinko-front-end.conf
+++ b/task3/front-end/softy-pinko-front-end.conf
@@ -1,9 +1,15 @@
 server {
-    listen 9000;
-    server_name softy-pinko-front-end;
+    listen 80;
 
-    location / {
-        root /var/www/html/softy-pinko-front-end;
-        index index.html;
-    }
-} 
+    # Définir le répertoire où se trouvent tes fichiers HTML
+    root /usr/share/nginx/html;
+
+    # Si le fichier demandé n'existe pas, redirige vers index.html (gestion des routes SPA)
+    try_files $uri /index.html;
+
+    # Configuration de base pour gérer les en-têtes CORS (si nécessaire)
+    add_header Access-Control-Allow-Origin *;
+    add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
+    add_header Access-Control-Allow-Headers 'Origin, X-Requested-With, Content-Type, Accept, Authorization';
+}
+ 
