--- a/task1/Dockerfile
+++ b/task1/Dockerfile
@@ -1,11 +1,21 @@
 FROM ubuntu:latest
 
-RUN apt-get update && \
-    apt-get upgrade -y && \
-    apt-get install -y python3 python3-pip && \
-    pip3 install flask
+# Éviter les demandes d'entrée utilisateur
+ENV DEBIAN_FRONTEND=noninteractive
 
+# Installer Python3, pip3 et supprimer la restriction EXTERNALLY-MANAGED
+RUN apt-get update && \
+    apt-get install -y python3 python3-pip && \
+    rm /usr/lib/python*/EXTERNALLY-MANAGED
+
+# Installer Flask avec pip3
+RUN pip3 install flask
+
+# Définir le dossier de travail
 WORKDIR /app
+
+# Copier le fichier api.py dans l'image
 COPY ./api.py /app/api.py
 
-CMD ["python3", "api.py"] 
+# Commande pour lancer le serveur Flask
+CMD ["python3", "api.py"]
