--- a/task4/front-end/softy-pinko-front-end.conf
+++ b/task4/front-end/softy-pinko-front-end.conf
@@ -1,9 +1,15 @@
 server {
-    listen 9000;
-    server_name softy-pinko-front-end;
+    listen 80;
 
     location / {
         root /var/www/html/softy-pinko-front-end;
         index index.html;
+        try_files $uri $uri/ =404;
     }
-} 
+
+    location /api/ {
+        proxy_pass http://task4-back-end:5252/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+}
