--- a/task2/front-end/softy-pinko-front-end.conf
+++ b/task2/front-end/softy-pinko-front-end.conf
@@ -1,9 +1,9 @@
 server {
     listen 9000;
-    server_name softy-pinko-front-end;
+    server_name localhost;
 
     location / {
         root /var/www/html/softy-pinko-front-end;
         index index.html;
     }
-} 
+}
