--- a/task4/docker-compose.yml
+++ b/task4/docker-compose.yml
@@ -1,10 +1,8 @@
-version: '3'
-
+version: "3"
 services:
   back-end:
     build:
       context: ./back-end
-      dockerfile: Dockerfile
     image: softy-pinko-back-end:task4
     ports:
       - "5252:5252"
@@ -12,9 +10,8 @@ services:
   front-end:
     build:
       context: ./front-end
-      dockerfile: Dockerfile
     image: softy-pinko-front-end:task4
     ports:
-      - "9000:9000"
+      - "8080:80"
     depends_on:
-      - back-end 
+      - back-end
