--- a/task4/front-end/Dockerfile
+++ b/task4/front-end/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:latest
 
-COPY ./softy-pinko-front-end /var/www/html/softy-pinko-front-end
-COPY ./softy-pinko-front-end.conf /etc/nginx/conf.d/default.conf 
+COPY ./index.html /usr/share/nginx/html/index.html
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
