--- a/task6/docker-compose.yml
+++ b/task6/docker-compose.yml
@@ -1,31 +1,25 @@
-version: '3'
-
+version: "3"
 services:
   back-end:
     build:
-      context: ./back-end
+      context: ./back-end  # Assure-toi que le chemin est correct ici
       dockerfile: Dockerfile
-    image: softy-pinko-back-end:task5
-    expose:
-      - "5252"
-
+    ports:
+      - "5252:5252"
+    
   front-end:
     build:
-      context: ./front-end
+      context: ./front-end  # Chemin vers ton répertoire front-end
       dockerfile: Dockerfile
-    image: softy-pinko-front-end:task5
-    expose:
-      - "9000"
-    depends_on:
-      - back-end
-
-  proxy:
-    build:
-      context: ./proxy
-      dockerfile: Dockerfile
-    image: softy-pinko-proxy:task5
     ports:
       - "80:80"
+    
+  proxy:
+    image: nginx:alpine
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "8080:80"
     depends_on:
+      - back-end
       - front-end
-      - back-end 
